syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
package com.example.prueba;
option java_multiple_files=true;
option java_package="com.example.prueba";
option java_outer_classname="PruebaProto";

message Prueba {
  int64 id=1;
  string name =2;
  double rate =3;
  Status status= 4;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  DELETED = 3;
}

message PruebaRequest{
  string name=1;
}

message PruebaResponse{
  string name =1;
  double rate =2;
}

service PruebaService {
  // get a Prueba by name
  rpc getPruebaByName (PruebaRequest) returns (PruebaResponse);
  // get all pruebas
  rpc getAllPruebas (google.protobuf.Empty) returns (stream PruebaResponse);
}